k8s/auth-server.yaml
# 1. Auth 서버용 Service
apiVersion: v1
kind: Service
metadata:
  name: sk007-auth-server-service
  namespace: skala3-ai1
spec:
  selector:
    app: auth-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
# 2. Auth 서버용 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk007-auth-server-deployment
  namespace: skala3-ai1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - name: auth-server-container
        # CI 파이프라인에서 Harbor에 올린 auth-server 이미지 경로
        image: amdp-registry.skala-ai.com/skala26a-ai1/auth-server:latest
        ports:
        - containerPort: 8080
        
        # Auth 서버 또한 회원 정보 읽기위해 DB 연결
