k8s/db.yaml
# 1. DB의 고정 주소를 만들어주는 Service
apiVersion: v1
kind: Service
metadata:
  name: sk007-project-db
  namespace: skala3-ai1
spec:
  selector:
    app: project-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
# 2. 실제 DB 컨테이너를 띄우는 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk007-project-db-deployment
  namespace: skala3-ai1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-db
  template:
    metadata:
      labels:
        app: project-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:11.4
        ports:
        - containerPort: 3306
        args:
        - --character-set-server=utf8mb4
        - --collation-server=utf8mb4_unicode_ci
        - --lower_case_table_names=1
        
        # 볼륨 마운트: 컨테이너 안의 특정 경로 아래 정의한 볼륨 연결
        volumeMounts:
        - name: initdb-volume
          mountPath: /docker-entrypoint-initdb.d
          
      # 볼륨 정의: ConfigMap을 볼륨으로 사용
      volumes:
      - name: initdb-volume
        configMap:
          name: mariadb-initdb-config
