k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk007-ai-server-service
  namespace: skala3-ai1
spec:
  selector:
    app: smart-glass-ai-server  
    # Deployment 만들 때 적었던 그 label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
